# iree

./: 404.html  CMakeLists.txt  README.md  SUBMODULE_VERSIONS  SUBMODULE_VERSIONS.txt  index.html  reverse.mlir  sitemap.xml
.github/workflows/: publish_docs.yml
.github/workflows/ci/: test-compiler.sh
building-from-source/: index.html
building-from-source/android/: index.html
building-from-source/getting-started/: index.html
building-from-source/ios/: index.html
building-from-source/riscv/: index.html
community/: index.html
community/blog/: index.html
community/blog/2021-07-19-tflite-support-via-tosa/: index.html
community/blog/2021-10-13-matrix-multiplication-with-mmt4d/: index.html
community/blog/2021-10-15-cuda-backend/: index.html
community/blog/2024-01-22-exploring-cpu-microkernels-on-a-matmul-example/: index.html
community/blog/2024-01-29-iree-mlir-linalg-tutorial/: index.html
community/blog/2025-03-06-how-data-tiling-works-with-encoding-specialization/: index.html
community/blog/2025-03-07-demo-data-tiling-with-multi-device/: index.html
community/blog/2025-08-25-data-tiling-walkthrough/: index.html
community/tags/: index.html
compiler/src/iree/compiler/Dialect/LinalgExt/IR/: BUILD.bazel  CMakeLists.txt  LinalgExtBase.td  LinalgExtDialect.cpp  LinalgExtOpInterfaces.cpp  LinalgExtOpInterfaces.h  LinalgExtOps.cpp  LinalgExtOps.h  LinalgExtOps.td  TilingInterfaceImpl.cpp
compiler/src/iree/compiler/Dialect/LinalgExt/IR/test/: canonicalize.mlir  invalid.mlir  roundtrip.mlir
developers/: index.html
developers/building/bazel/: index.html
developers/building/cmake-options/: index.html
developers/building/cmake-with-ccache/: index.html
developers/building/emscripten/: index.html
developers/debugging/android-with-lldb/: index.html
developers/debugging/compile-time-regressions/: index.html
developers/debugging/fuzzing/: index.html
developers/debugging/gpu/: index.html
developers/debugging/integration-tests/: index.html
developers/debugging/llvm/: index.html
developers/debugging/model-development/: index.html
developers/debugging/releases/: index.html
developers/debugging/sanitizers/: index.html
developers/design-docs/cuda-hal-driver/: index.html
developers/design-docs/design-roadmap/: index.html
developers/design-docs/function-abi/: index.html
developers/design-docs/hip-hal-driver/: index.html
developers/design-docs/invocation-execution-model/: index.html
developers/design-docs/metal-hal-driver/: index.html
developers/design-docs/vm/: index.html
developers/general/contributing/: index.html
developers/general/developer-overview/: index.html
developers/general/developer-tips/: index.html
developers/general/github-actions/: index.html
developers/general/release-management/: index.html
developers/general/testing-guide/: index.html
developers/general/versioning-scheme/: index.html
developers/lowering-config/: index.html
developers/performance/benchmarking/: index.html
developers/performance/profiling/: index.html
developers/performance/profiling-cpu-events/: index.html
developers/performance/profiling-gpu-vulkan/: index.html
developers/performance/profiling-with-tracy/: index.html
developers/update-sdxl-golden-outputs/: index.html
developers/usage-best-practices/: index.html
developers/vulkan-environment-setup/: index.html
docs/: op_coverage.md
guides/: index.html
guides/deployment-configurations/: index.html
guides/deployment-configurations/bare-metal/: index.html
guides/deployment-configurations/cpu/: index.html
guides/deployment-configurations/gpu-cuda/: index.html
guides/deployment-configurations/gpu-metal/: index.html
guides/deployment-configurations/gpu-rocm/: index.html
guides/deployment-configurations/gpu-vulkan/: index.html
guides/ml-frameworks/: index.html
guides/ml-frameworks/jax/: index.html
guides/ml-frameworks/onnx/: index.html
guides/ml-frameworks/pytorch/: index.html
guides/ml-frameworks/tensorflow/: index.html
guides/ml-frameworks/tflite/: index.html
guides/parameters/: index.html
iree/base/: dynamic_library_posix.cc  dynamic_library_win32.cc
iree/compiler/Conversion/: BUILD
iree/hal/: BUILD  CMakeLists.txt  device.h
iree/hal/dawn/: dawn_device.cc  dawn_device.h
iree/hal/llvmjit/: BUILD  CMakeLists.txt
iree/hal/vmla/: BUILD  CMakeLists.txt  op_kernels_ruy.h  vmla_device.cc  vmla_device.h
iree/hal/vulkan/: vulkan_device.cc  vulkan_device.h
llvm-external-projects/iree-dialects/: BUILD.bazel
reference/: index.html
reference/bindings/: index.html
reference/bindings/c-api/: index.html
reference/bindings/python/: index.html
reference/extensions/: index.html
reference/glossary/: index.html
reference/mlir-dialects/: index.html
reference/mlir-passes/: index.html
reference/optimization-options/: index.html
reference/tuning/: index.html
samples/: CMakeLists.txt
samples/ukernel_module/: CMakeLists.txt  example_matmul.mlir  ukernel.mlir
scripts/: prepare_doc_publication.py
search/: search_index.json
tools/: CMakeLists.txt  generate_matmul_tests.py  iree-device-codegen.cc  run-cpu-kernel.cpp  run-hip-kernel.cpp  run-vulkan-kernel.cpp  run_matmul_tests.py
(+358 files in other folders)
